--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<title>运筹学最短路算法</title>
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/common.css">
+	<!-- <link rel="stylesheet" href="http://cdn.bootcss.com/bootstrap/3.3.0/css/bootstrap.min.css"> -->
 </head>
 <body>
 	<header>
